# PROJECT_ZURINI

./: .env.example  .gitignore  AGENTS.md  AI_AUTO_TEMPLATE_VERSION  docker-compose.yml  pyproject.toml
(old)/: # [자동매매 전략 기획서].md  # [자동매매 전략 기획서_고도화].md  # [자동매매 플로우 차트].md  [자동매매_시퀀스_다이어그램].md  [자동매매_통합_아키텍처_설계서].md  agent.md
config/: phase1-backtest.toml  phase2-backtest-conservative.toml
docs/: AI_AUTO_PATCH_MANIFEST.md  AI_MODEL_ROUTING.md  AUTOMATION_OPERATING_POLICY.md  DATA_COMPLETION.md  DEPLOYMENT_COMPLETION.md  DOMAIN_PACKS.md  DOMAIN_PACK_AUTHORING_GUIDE.md  INCIDENT_OPS.md  INTERVIEW_PLAN_LAYER.md  OBSERVABILITY_COMPLETION.md  PATCH_NOTES.md  PERFORMANCE_COMPLETION.md  SECURITY_COMPLETION.md  SESSION_QUALITY_PLAN.md  UI_COMPLETION.md  WORKFLOW.md  api-smoke-tests.md  backtest-report-analysis.md  operator-dashboard-plan.md  phase-1-baseline.md  phase-1-completion.md  phase-1-development.md  phase-1-prd.md  phase-1-test-spec.md  phase-1.5-large-dummy-rehearsal.md  phase-2-data-continuity-criteria.md  phase-2-real-data-runbook.md  plan-a-field-dry-run-readiness.md  plan-a-next-actions.md  plan-a-parameter-contract-matrix.md  plan-a-todo-3-7-review.md  post-close-simulation-candidates.md  strategy-baseline.md  strategy-candidate-a.md  strategy-candidate-reset.md  strategy-fieldtest-alignment.md  strategy-matrix-results.md  strategy-pipeline-trust-audit.md  strategy-plan-a-ralph-run-20260511.md  strategy-ralph-run-20260510.md  (+1 more)
sample/: A000020.csv
scripts/: archive-omx-artifacts.sh  automation-doctor.sh  build-daily-bars-from-minute.py  discover-ai-models.sh  (+13 more)
(+96 files in other folders)
